tests/example_policies/demo_short/demo2-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: sanity_np2
    networkPolicyList:
      - sanity2-networkpolicy.yaml
    expected_warnings: 0

queries:
  - name: sanity_np2
    sanity:
      - sanity_np2
    expected: 1
