tests/example_policies/demo_short/demo3-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: interfere_np
    networkPolicyList:
      - interferes-networkpolicy.yaml
    expectedWarnings: 0

queries:
  - name: interference
    interferes:
      - interfere_np/kube-system/enable-from-default-to-isolated-by-app
      - interfere_np/kube-system/enable-from-vendor-system-to-isolated-by-tier
    expected: 1
